--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .search-highlights > em {
+    /* search jesults highlight tags */
+    @apply rounded bg-indigo-100  px-[2px] not-italic dark:bg-indigo-900;
+  }
+
+  .suggestion-highlight > em {
+    /* "Did you mean" suggestion highlight*/
+    @apply font-bold;
+  }
+}
