--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,14 +7,14 @@
     --foreground: 222.2 84% 4.9%;
 
     --gradient-1: #567be0;
-    --gradient-2: #9e6277;
+    --gradient-2: #a4708a;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --muted-foreground-page: 0 0% 80%;
 
     --top-navigation-background: #2f34339f;
-    --bottom-background: #594752;
+    --bottom-background: #2f343396;
     --table-background: #2f343396;
     --switch-background: #808080;
 
