tooltips and colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
     --foreground: 222.2 84% 4.9%;
 
     --gradient-1: #567be0;
-    --gradient-2: #a0728e;
+    --gradient-2: #9a7389;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -15,7 +15,7 @@
 
     --top-navigation-background: #3e4e72;
     --table-background: #2f313496;
-    --bottom-background: #433e4ec2;
+    --bottom-background: #2f313496;
     --switch-background: #808080;
 
     --popover: 0 0% 100%;
