--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
     --foreground: 222.2 84% 4.9%;
 
     --gradient-1: #567be0;
-    --gradient-2: #9a7389;
+    --gradient-2: #6b6a92;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
