--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
     --background: #e2e2e2;
     --foreground: 222.2 84% 4.9%;
 
-    --gradient-1: #567be0;
+    --gradient-1: #5e89df;
     --gradient-2: #75739f;
 
     --muted: 210 40% 96.1%;
